--- a/aist/analysis/templates/player_based_analysis.html
+++ b/aist/analysis/templates/player_based_analysis.html
@@ -1,21 +1,12 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Page Title</title>
-    <!-- Add any necessary CSS files -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
+{% block title %}Team Analysis - AIST{% endblock %}
 
-<body>
-    <!-- Dark theme toggle button -->
-    <button id="dark-theme-toggle">Toggle Dark Theme</button>
-
+{% block content %}
     <!-- Page content -->
     <div class="container">
+        <h2>AI Sports Analysis Tool (AIST)</h2>
+        <h2>Player Analysis</h2>
         {% if empty_database %}
         <p>No data available in the database.</p>
         {% else %}
@@ -66,8 +57,4 @@
         {% endif %}
         {% endif %}
     </div>
-
-
-</body>
-
-</html>
+{% endblock %}
