match analyse page added
match analyse page added with basics

--- a/aist/analysis/templates/main_page.html
+++ b/aist/analysis/templates/main_page.html
@@ -19,5 +19,6 @@
         </p>
         <a href="{% url 'team_analysis' %}"><button>Team-based Analysis</button></a>
         <a href="{% url 'player_analysis' %}"><button>Player-based Analysis</button></a>
+        <a href="{% url 'match_analysis' %}"><button>Match Analysis</button></a>
     </div>
 {% endblock %}
