--- a/aist/templates/player_based_analysis.html
+++ b/aist/templates/player_based_analysis.html
@@ -6,15 +6,31 @@
     <!-- Page content -->
     <div class="container">
         <h2>Player Analysis</h2>
-        {% if empty_database %}
-        <p>No data available in the database.</p>
-        {% else %}
         <form method="post">
             {% csrf_token %}
-            <label for="player_name">Enter Player Name:</label>
-            <input type="text" id="player_name" name="player_name">
+            <label for="team">Select Team:</label>
+            <select id="team" name="team">
+                {% for team in teams %}
+                <option value="{{ team.Tm }}">{{ team.Tm }}</option>
+                {% endfor %}
+            </select>
+            <label for="year">Select Year:</label>
+            <input type="number" id="year" name="year">
+            <button type="submit">Filter</button>
+        </form>
+        
+        {% if filtered_players %}
+        <form method="post">
+            {% csrf_token %}
+            <label for="player_name">Select Player:</label>
+            <select id="player_name" name="player_name">
+                {% for player in filtered_players %}
+                <option value="{{ player }}">{{ player }}</option>
+                {% endfor %}
+            </select>
             <button type="submit">Analyze</button>
         </form>
+        {% endif %}
         
         {% if player_details %}
         <h2>Player Details</h2>
@@ -35,7 +51,6 @@
             <li>{{ player }}: {{ data.player_per }} vs {{ data.other_player_per }} ({{ data.comparison }})</li>
             {% endfor %}
         </ul>
-        {% endif %}
         {% endif %}
     </div>
 {% endblock %}
