--- a/aist/templates/base.html
+++ b/aist/templates/base.html
@@ -78,6 +78,7 @@
                             <a href="{% url 'team_analysis' %}" class="dropdown-item">Team Analysis</a>
                             <a href="{% url 'player_analysis' %}" class="dropdown-item">Player Analysis</a>
                             <a href="{% url 'match_analysis' %}" class="dropdown-item">Match Analysis</a>
+                            <a href="{% url 'dummy' %}" class="dropdown-item">Dummy Test Page</a>
                         </div>
                     </div>
                 </div>
