--- a/aist/templates/base.html
+++ b/aist/templates/base.html
@@ -70,7 +70,7 @@
                 
                 <div class="navbar-nav w-100">
                     <a href="{% url 'main_page' %}" class="nav-item nav-link"><i
-                            class="fa fa-laptop me-2"></i>A.I.S.T.</a>
+                            class="fa fa-futbol me-2"></i>A.I.S.T.</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
                                 class="fa fa-chart-bar me-2"></i>Analysis</a>
@@ -99,7 +99,7 @@
                 <form class="d-none d-md-flex ms-4">
                     <input class="form-control bg-dark border-0" type="search" placeholder="Search">
                 </form>
-                <a href="{% url 'main_page' %}" class="nav-item nav-link"><i class="fa fa-laptop me-2"></i>AI Sports Analysis Tool (AIST) - Orion Innovation - Hackathon - 2024</a>
+                <a href="{% url 'main_page' %}" class="nav-item nav-link"><i class="fa fa-code me-2"></i>AI Sports Analysis Tool (AIST) - Orion Innovation - Hackathon - 2024</a>
                 <div class="navbar-nav align-items-center ms-auto">  
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link " >
@@ -129,22 +129,9 @@
             <!-- Blank End -->
 
 
-            <!-- Footer Start -->
-            <div class="container-fluid pt-4 px-4">
-                <div class="bg-secondary rounded-top p-4">
-                    <div class="row">
-                        <div class="col-12 col-sm-6 text-center text-sm-start">
-                            &copy; <a href="#">2024 AIST</a>, All Right Reserved.
-                        </div>
-                        <div class="col-12 col-sm-6 text-center text-sm-end">
-                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                            Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                            <br>Distributed By: <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Footer End -->
+        
+           
+        
         </div>
         <!-- Content End -->
 
