--- a/aist/templates/match_analysis.html
+++ b/aist/templates/match_analysis.html
@@ -6,6 +6,11 @@
 <!-- Page content -->
 <div class="container">
     <h2>Match Analysis (2021)</h2>
+    <p>This page helps users predict match outcomes by analyzing historical team statistics. 
+        Users pick two teams from a dropdown menu on a webpage and submit their choices. The page then sends these team names to the server.</p>
+    <p>Using logistic regression, the page analyzes stats like win-loss percentage, points scored and allowed per game, and Simple Rating page (SRS) for the selected teams. 
+        These stats are pulled from a database. The page trains a model using these features and predicts the probabilities of each team winning. Users see these predicted probabilities, helping them make informed decisions about the match's potential outcome.</p> 
+    <br>
     <form method="post">
         {% csrf_token %}
         <label for="team1">Select Home Team:</label>
