--- a/aist/templates/main_page.html
+++ b/aist/templates/main_page.html
@@ -7,12 +7,22 @@
     <div class="container">
         <h2>A.I.S.T.</h2>
         <p>
-            In this project, we're using artificial intelligence to analyze datasets of team and player stats in sports.
-            Our goal is to uncover patterns in the data, revolutionizing how teams approach their game and offering
+            In this project, we're using 
+            <b class="text-primary" style="display: inline;">artificial intelligence</b>
+             to 
+             <b class="text-primary" style="display: inline;">analyze</b>
+             datasets of team and player stats in sports.
+            Our goal is to 
+            <b class="text-primary" style="display: inline;">uncover patterns</b>
+             in the data, revolutionizing how teams approach their game and offering
             straightforward insights to boost their competitive edge.
         </p>
         <p>
-            The cool part is that we aim to make these advanced tools easy to use for all kinds of sports teams, big or
+            The cool part is that we aim to make these advanced tools 
+            <b class="text-primary" style="display: inline;">easy to use</b>
+             for 
+             <b class="text-primary" style="display: inline;">all kinds of sports teams</b>
+             , big or
             small, by sharing practical advice derived from the data. This project is about making smart insights
             accessible
             to everyone in the world of sports, empowering teams to make better decisions and elevate their game.
